--- a/style.css
+++ b/style.css
@@ -21,18 +21,18 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%);
+    background-color:rgba(0, 0, 0, 0.5);
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
 .hero-icon {
-	font-size:100px;
+	font-size:50px;
   color: #ffffff;
 }
 .hero-icon i:hover {
@@ -68,9 +68,11 @@ h2 {
 }
 ul{
   font-family: 'Dancing Script', cursive;
+
 }
 a{
-  color: #A1FC03;
+  color: #ffffff;
+  text-shadow: 5px 2px 2px #000000;
 }
 /*.container{
   border: 3px solid #73AD21;
