--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 .container{
-  margin-top: 40px;
+  margin-top: 100px;
+
 }
 .text-center{
 
-  font-family: 'Meddon', cursive;
-    font-weight: lighter;
-    font-size: 60px;
+  font-family: 'dinblackalternate', Arial, Helvetica, sans-serif;
+    line-height: 102px;
+    font-size: 100px;
     color: #ffffff;
     text-shadow: 5px 2px 2px #000000;
+    margin-top: 275px;
 
 }
 /*img{
@@ -46,7 +48,7 @@
   color: rgb(109, 111, 114);
 }
 body{
-  background: url(NYC.jpg) no-repeat;
+  background: url(stock.jpg) no-repeat;
   background-size: cover;
   width: 100%;
   background-attachment: fixed;
