--- a/style.css
+++ b/style.css
@@ -1,3 +1,49 @@
+/*.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}*/
+/*.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}*/
+/*.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
+    background: #000;
+}*/
+/*.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}*/
+/*.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}*/
+.video-container video {
+   position: fixed;
+   right: 0;
+   bottom: 0;
+   min-width: 100%;
+   min-height: 100%;
+   width: auto;
+   height: auto;
+   z-index: -100;
+}
+/*.video-container video.fillWidth {
+    width: 100%;
+}*/
 .container{
   margin-top: 100px;
 
@@ -9,8 +55,15 @@
     font-size: 100px;
     color: #ffffff;
     text-shadow: 5px 2px 2px #000000;
-    margin-top: 275px;
+    margin: 275px 0px 0px 250px;
+    z-index: 1;
+    position: absolute;
 
+
+}
+.menu{
+  z-index: 1;
+  position: absolute;
 }
 /*img{
   border-style: groove;
@@ -48,8 +101,8 @@
   color: rgb(109, 111, 114);
 }
 body{
-  background: url(stock.jpg) no-repeat;
-  background-size: cover;
+  /*background: url(stock.jpg) no-repeat;*/
+  /*background-size: cover;*/
   width: 100%;
   background-attachment: fixed;
 
