--- a/final_project/style.css
+++ b/final_project/style.css
@@ -1,4 +1,7 @@
 h1{
+  font-family: Oswald, sans-serif;
+  font-size: 36px;
+  letter-spacing: 3px;
   text-align: center;
   margin-top: 300px;
   margin-bottom: 120px;
