--- a/final_project/style.css
+++ b/final_project/style.css
@@ -5,6 +5,7 @@ h1{
   text-align: center;
   margin-top: 300px;
   margin-bottom: 120px;
+  /*z-index: 3;*/
 }
 
 .btn-info.active, .btn-info:active {
@@ -82,4 +83,45 @@ h1{
     border-color: #9bc7de transparent;
     border-width: 0 6px 6px 6px ;
     margin-top: -3px;
+}
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.video-container .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+.video-container video.fillWidth {
+    width: 100%;
 }
