--- a/final_project_new/style.css
+++ b/final_project_new/style.css
@@ -17,6 +17,9 @@ h1{
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 80px;
+  text-shadow: 8px 5px 10px #000000;
+  letter-spacing: 2px;
+
 
 }
 
@@ -28,9 +31,9 @@ h1{
 #submitButton {
     background-color: black;
     opacity: .8;
-    border: 1px solid black;
+    border: 1px solid white;
     width: 100px;
-    padding: 10px;
+    padding: 7.5px;
     margin: 0px auto;
     display: table;
     outline-style: double;
@@ -41,6 +44,10 @@ h1{
     font-family: utopia-std-display;
 
 
+}
+
+#submitButton:hover {
+  background-color: #03B0D0;
 }
 input {
     padding: 10px;
@@ -53,6 +60,7 @@ input {
     opacity: .8;
     color: black;
     outline: none;
+    border: 1px ridge grey;
     /*border: 5px solid black;*/
     cursor: pointer;
 
@@ -87,6 +95,7 @@ li{
   }
   h1{
     margin-top: 170px;
+    text-shadow: none;
   }
   a {
     color: black;
