--- a/newportfolio/style.css
+++ b/newportfolio/style.css
@@ -3,27 +3,57 @@
   height: 600px;
   max-height: 600px;
 }
+h1{
+  letter-spacing: 2px;
+  font-size: 40px;
+  font-weight: normal;
+  font-family: sans-serif;
+  color: rgb(90, 90, 90);
+}
+.muted{
+  color: rgb(140, 140, 140);
+  font-size: 30px;
+
+}
+p{
+  font-size: 20px;
+  color: rgb(90, 90, 90);
+}
 .overlay{
   z-index: 99;
-  color: #FFF;
-  font-size: 3em;
   position: absolute;
   top: 30%;
   left: 0;
   width: 100%;
+  color: #FFF;
   text-align: center;
-
+}
+.title-uppercase{
+  font-family: 'Montserrat Subrayada', sans-serif;
+  text-transform: uppercase;
+  font-size: 4em;
+  text-shadow: 5px 2px black;
+}
+h6{
 
 }
+
 .col-xs-6{
   text-align: center;
 }
 .projects{
   text-align: center;
   font-family: 'Grand Hotel', cursive;
+  font-size: 50px;
 
 }
 .img-thumbnail{
-  color: grey;
+  background-color: rgb(204, 204, 204);
+  width: 300px;
+  height: 300px;
+  text-align: center;
+  font-size: 30px;
+  color: rgb(149, 149, 149);
+  /*padding-top: 120px;*/
 
 }
